bind list of posts on div

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -5,6 +5,6 @@
     <title>Title</title>
 </head>
 <body>
-    <h2 th:text="${title}"></h2>
+    <div th:each="entry : ${posts}"></div>
 </body>
 </html>
