--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
     <meta charset="UTF-8">
     <title>Title</title>
 </head>
 <body>
-    <div th:each="entry : ${posts}"></div>
+    <div th:each="entry : ${posts}">
+        <h2 th:text="${entry.getTitle()}"></h2>
+    </div>
 </body>
 </html>
